# NeoMAGI

./: .complexity-baseline.json  .complexity-overrides.json  .env_template  .gitignore  AGENTS.md  AGENTTEAMS.md  CLAUDE.md  README.md  README_ch.md  README_de.md  docker-compose.yml  justfile  pyproject.toml
.beads/: README.md  config.yaml  metadata.json
.claude/: settings.json
decisions/: 0001-adopt-adr-lite-decision-log.md  0002-default-openai-with-gemini-migration-validation.md  0003-channel-baseline-webchat-first-telegram-second.md  0004-use-uv-as-python-package-manager.md  0005-use-just-as-command-runner.md  0006-use-postgresql-pgvector-instead-of-sqlite.md  0007-frontend-baseline-react-typescript-vite.md  0008-frontend-ui-system-tailwind-shadcn.md  0009-frontend-state-management-zustand.md  0010-realtime-transport-native-websocket-api.md  0011-frontend-package-manager-pnpm-with-just-entrypoints.md  0012-backend-framework-fastapi-uvicorn.md  0013-backend-configuration-pydantic-settings.md  0014-paradedb-tokenization-icu-primary-jieba-fallback.md  0015-orm-strategy-sqlalchemy-async-with-sql-first-search.md  0016-model-sdk-strategy-openai-sdk-unified-v1.md  0017-database-schema-default-neomagi.md  0018-roadmap-versioning-with-progress-tracking.md  0019-chat-history-display-semantics-boundary.md  0020-database-hard-dependency-fail-fast.md  0021-multi-worker-session-ordering-and-no-silent-drop.md  0022-m1.3-soft-session-serialization-token-ttl.md  0023-roadmap-product-oriented-boundary.md  0024-m1.5-tool-modes-and-priority-reorder.md  (+42 more)
design_docs/: GLOSSARY.md  (+13 more)
(+399 files in other folders)
