[project]
name = "neomagi"
version = "0.1.0"
description = "Personal agent harness with persistent memory"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic-settings>=2.7.0",
    "openai>=1.60.0",
    "aiofiles>=24.1.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "psycopg[binary]>=3.0.0",
    "tiktoken>=0.7.0",
    "aiogram>=3.15.0",
    "bcrypt>=4.0.0",
    "PyJWT>=2.8.0",
    "jieba>=0.42.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
    "websockets>=14.0",
    "testcontainers[postgres]>=4.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
markers = [
    "integration: tests requiring a real PostgreSQL database",
    "pg_required: tests requiring real PostgreSQL for correctness (e.g. concurrency)",
    "retrieval_regression: memory retrieval regression tests (requires PostgreSQL)",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]
